# rps-websockets

./: Dockerfile  Makefile  README.md  docker-compose.yml  entity.py  entrypoint.sh  game_master.py  index.html  main.py  pyproject.toml  run-server.sh
.github/workflows/: lint_and_test.yml
rps/: entity.py  game_master.py  main.py
src/: entity.py  game.py  game_master.py  main.py
tests/: test_e2e.py
