[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = "Rock"
authors = ["Andmedoctopus <andmed999@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
websockets = "^11.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.2"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
exclude = [
    "__pycache__",
    ".venv",
    ]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
